--- a/BTS.css
+++ b/BTS.css
@@ -55,28 +55,44 @@ nav a:hover {
     -webkit-text-stroke: 0.05rem black;
     font-size: 2.5rem;
     font-weight: normal;
-    text-align: left;
+    text-align: center;;
     margin: 0;
+    padding: 2rem;
 }
-
+/* Intro */
 #Intro p {
     color: black;
     font-size: 1rem;
     font-weight: normal;
     text-align: center;
 }
-#disc h2, #main h3 {
+#disc h2, #disc h3 {
     color: black;
     font-size: 2.25rem;
     font-weight: bold;
     text-align: center;
 }
 
+/* Biography */
 #members {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
+
+#members p {
+    display: flex;
+    justify-content: center;
+    font-size: 1.5rem;
+}
+#RM, #Jin, #Suga, #J-Hope, #Jimin, #V, #JK {
+    position: relative;
+    display: flex;
+    height: 15vh;
+    border: 2px solid #5024e1;
+    align-content: center;
+    border-radius: 50%  
+}   
 
 /* Back to top */
 .button {
